# MLP

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: activation.h  loss.h  matrix.h  mlp.h  util.h
src/: activation.c  main.c  matrix.c  mlp.c  util.c
